tests/should_fail/non_bool_assertion.rs
extern crate creusot_contracts;
use creusot_contracts::prelude::*;

fn main() {
    proof_assert! { 1 };
}
