tests/should_fail/non_bool_assertion.stderr
error[E0308]: mismatched types
 --> non_bool_assertion.rs:5:21
  |
5 |     proof_assert! { 1 };
  |     ----------------^--
  |     |               |
  |     |               expected `bool`, found `Int`
  |     expected `bool` because of return type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
